[workspace]
members = [
    # Crates
	"crates/cxx-qt-widgets",

    # Examples
	"examples/maps",
    "examples/notifications",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-build = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
cxx-qt-lib-extras = "0.8"
cxx-qt-widgets = { path = "crates/cxx-qt-widgets" }
