[package]
name = "cxx-qt-widgets"
edition.workspace = true
license.workspace = true
version.workspace = true

links = "cxx-qt-widgets"


[dependencies]
cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib.workspace = true
cxx-qt-lib-extras.workspace = true

[build-dependencies]
cxx-qt-build.workspace = true

